законченный header, footer

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
   </div>
   </body>
   <footer class="footer-wrapper">
-      <div class="hashtag">
+      <div class="info">
         <b>AOD New York </b></br>
-        <b>2250 Lexington Avenue </br> New York, NY 10035  - info@domain.com</b>
+        <i>2250 Lexington Avenue </br> New York, NY 10035  - info@domain.com</i>
       </div>
       <div class="social">
         <ul>
