--- a/index.html
+++ b/index.html
@@ -7,50 +7,95 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <title>Bike</title>
   </head>
- <body>
+  <body>
     <div class="page-wrapper">
-    <div class="header-img">
-      <header class="page-header">
-        <nav class="main-nav">
-          <ul class="main-nav-list">
-            <li class="nav"><a href="#">about us</a></li>
-            <li class="nav dot-one">.</li>
-            <li class="nav"><a href="#">work</a></li>
-            <a class="logo">
-            <img src="img/logo.png" width="94" height="85" alt="логотип Bicycle">
-          </a>
-            <li class="nav"><a href="#">shop</a></li>
-            <li class="nav dot-two">.</li>
-            <li class="nav"><a href="#">contact</a></li>
-          </ul>
-        </nav>
-      </header>
+      <div class="header-img">
+        <header class="page-header">
+          <nav class="main-nav">
+            <ul class="main-nav-list">
+              <li class="nav"><a href="#">about us</a></li>
+              <li class="nav dot-one">.</li>
+              <li class="nav"><a href="#">work</a></li>
+              <a class="logo">
+              <img src="img/logo.png" width="94" height="85" alt="логотип Bicycle">
+              </a>
+              <li class="nav"><a href="#">shop</a></li>
+              <li class="nav dot-two">.</li>
+              <li class="nav"><a href="#">contact</a></li>
+            </ul>
+          </nav>
+        </header>
       </div>
-  </div>
+    </div>
+    <main>
+      <section class="eee">
+        <section class="new-generation">
+          <img src="img/new-icon.png" width="52" height="43">
+          <h3>a new generation of vintage bike</h3>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever<br>since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only<br>five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+        </section>
+        <section class="vintage">
+          <section class="vin-img">
+            <img src="img/vintage-logo.png" width="113" height="118">
+          </section>
+          <section class="vin-text">
+            <img src="img/vintage-icon.png" width="41" height="30">
+            <h3>vintage olivia</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and<br>typesetting industry. Lorem Ipsum has been the industry's<br>standard dummy text ever since the 1500s, when an<br>unknown printer took a galley of type and scrambled it to<br>make a type specimen book. It has survived.</p>
+            <img src="img/vintage-sm.jpg" width="533" height="200">
+          </section>
+        </section>
+        <section class="la-boriosa">
+          <section class="la-bor-text">
+            <img src="img/vintage-icon.png" width="41" height="30">
+            <h3>la boriosa</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and<br>typesetting industry. Lorem Ipsum has been the industry's<br>standard dummy text ever since the 1500s, when an<br>unknown printer took a galley of type and scrambled it to<br>make a type specimen book. It has survived.</p>
+            <img src="img/la-bor-sm.jpg" width="534" height="200">
+          </section>
+          <section class="la-bor-img">
+            <img src="img/la-bor-logo.png" width="177" height="152">
+          </section>
+        </section>
+        <section class="retro">
+          <section class="retro-left-img">
+            <img src="img/retro-left.jpg" width="533" height="600">
+          </section>
+          <section class="retro-text">
+            <img src="img/retro-iconpng.png" width="23" height="41">
+            <h3>retro bike-m</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and<br>typesetting industry. Lorem Ipsum has been the industry's<br>standard dummy text ever since the 1500s, when an<br>unknown printer took a galley of type and scrambled it to<br>make a type specimen book. It has survived.</p>
+            <img src="img/retro-sm.jpg" width="534" height="200">
+          </section>
+          <section class="retro-right-img">
+            <img src="img/retro-right.jpg" width="534" height="600">
+          </section>
+        </section>
+      </section>
+    </main>
   </body>
   <footer class="footer-wrapper">
-      <div class="info">
-        <b>AOD New York </b></br>
-        <i>2250 Lexington Avenue </br> New York, NY 10035  - info@domain.com</i>
-      </div>
-      <div class="social">
-        <ul>
-          <li>
-            <a class="social-btn social-btn-twitter" href="#" alt="Твиттер">
-                <img src="img/twitter.png" height="35" width="34">
-            </a>
-          </li>
-          <li>
-            <a class="social-btn social-btn-fb" href="#">
-              <img src="img/f-b.png" height="35" width="34" alt="Фейсбук">
-            </a>
-          </li>
-          <li>
-            <a class="social-btn social-btn-something" href="#" alt="Непонятно что">
-              <img src="img/something.png" height="35" width="34">
-            </a>
-          </li>
-        </ul>
-      </div>
-    </footer>
-  </html>
+    <div class="info">
+      <b>AOD New York </b></br>
+      <i>2250 Lexington Avenue </br> New York, NY 10035  - info@domain.com</i>
+    </div>
+    <div class="social">
+      <ul>
+        <li>
+          <a class="social-btn social-btn-twitter" href="#" alt="Твиттер">
+          <img src="img/twitter.png" height="35" width="34">
+          </a>
+        </li>
+        <li>
+          <a class="social-btn social-btn-fb" href="#">
+          <img src="img/f-b.png" height="35" width="34" alt="Фейсбук">
+          </a>
+        </li>
+        <li>
+          <a class="social-btn social-btn-something" href="#" alt="Непонятно что">
+          <img src="img/something.png" height="35" width="34">
+          </a>
+        </li>
+      </ul>
+    </div>
+  </footer>
+</html>
