--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
     </div>
     <main>
-      <section class="eee">
+      <section class="menu">
         <section class="new-generation">
           <img src="img/new-icon.png" width="52" height="43">
           <h3>a new generation of vintage bike</h3>
@@ -36,40 +36,62 @@
         </section>
         <section class="vintage">
           <section class="vin-img">
-            <img src="img/vintage-logo.png" width="113" height="118">
           </section>
-          <section class="vin-text">
+          <section class="menu-text">
             <img src="img/vintage-icon.png" width="41" height="30">
             <h3>vintage olivia</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and<br>typesetting industry. Lorem Ipsum has been the industry's<br>standard dummy text ever since the 1500s, when an<br>unknown printer took a galley of type and scrambled it to<br>make a type specimen book. It has survived.</p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived.</p>
+            <img src="img/menu-line.png">
             <img src="img/vintage-sm.jpg" width="533" height="200">
           </section>
         </section>
         <section class="la-boriosa">
-          <section class="la-bor-text">
+          <section class="menu-text">
             <img src="img/vintage-icon.png" width="41" height="30">
             <h3>la boriosa</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and<br>typesetting industry. Lorem Ipsum has been the industry's<br>standard dummy text ever since the 1500s, when an<br>unknown printer took a galley of type and scrambled it to<br>make a type specimen book. It has survived.</p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived.</p>
+            <img src="img/menu-line.png">
             <img src="img/la-bor-sm.jpg" width="534" height="200">
           </section>
           <section class="la-bor-img">
-            <img src="img/la-bor-logo.png" width="177" height="152">
           </section>
         </section>
         <section class="retro">
           <section class="retro-left-img">
-            <img src="img/retro-left.jpg" width="533" height="600">
+            <img src="img/retro-big.jpg" width="533" height="600">
           </section>
-          <section class="retro-text">
+          <section class="menu-text">
             <img src="img/retro-iconpng.png" width="23" height="41">
             <h3>retro bike-m</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and<br>typesetting industry. Lorem Ipsum has been the industry's<br>standard dummy text ever since the 1500s, when an<br>unknown printer took a galley of type and scrambled it to<br>make a type specimen book. It has survived.</p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived.</p>
+            <img src="img/menu-line.png">
             <img src="img/retro-sm.jpg" width="534" height="200">
           </section>
           <section class="retro-right-img">
             <img src="img/retro-right.jpg" width="534" height="600">
           </section>
         </section>
+      </section>
+      <section class="carousel-item">
+        Здесь предположительно должна быть карусель
+      </section>
+      <section class="galery">
+        <img src="img/galery.jpg" width="1600" height="534">
+      </section>
+      <section class="discover">
+        <article class="btn">
+          <button type="button" class="btn-discover">discover the shop</button>
+        </article>
+      </section>
+      <section class="offer">
+        <article class="offer-img">
+          <img src="img/logo.png" width="94" height="85">
+        </article>
+        <h3 class="offer-title">Stay on the saddle!</h3>
+        <article class="btn-offer">
+          <button type="button" class="btn-enter">enter your email...</button>
+          <button type="button" class="btn-go">go</button>
+        </article>
       </section>
     </main>
   </body>
