--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <title>Bike</title>
   </head>
   <body>
@@ -72,7 +74,38 @@
         </div>
       </section>
       <section class="carousel-item">
-        Здесь предположительно должна быть карусель
+        <div class="cl">
+          <div class="cl-item-AOD">
+            <img src="img/cl-icon.png" width="32" height="27">
+            <div class="cl-head">
+              <h3>AOD New York @aod</h3>
+              <p> / 35 min</p>
+            </div>
+            <div class="cl-text">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac nulla semper rhoncus. Nullam a odio porttitor, dictum turpis vitae, pretium ante amet.</p>
+            </div>
+          </div>
+          <div class="cl-item-AOD">
+            <img src="img/cl-icon.png" width="32" height="27">
+            <div class="cl-head">
+              <h3>AOD New York @aod</h3>
+              <p> / 35 min</p>
+            </div>
+            <div class="cl-text">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac nulla semper rhoncus. Nullam a odio porttitor, dictum turpis vitae, pretium ante amet.</p>
+            </div>
+          </div>
+          <div class="cl-item-AOD">
+            <img src="img/cl-icon.png" width="32" height="27">
+            <div class="cl-head">
+              <h3>AOD New York @aod</h3>
+              <p> / 35 min</p>
+            </div>
+            <div class="cl-text">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac nulla semper rhoncus. Nullam a odio porttitor, dictum turpis vitae, pretium ante amet.</p>
+            </div>
+          </div>
+        </div>
       </section>
       <section class="galery">
         <div class="galery-img">
@@ -122,7 +155,7 @@
         </article>
       </section>
       <section class="offer">
-        <a>
+        <a href="./">
         <img src="img/logo.png" width="94" height="85" class="offer-img">
         </a>
         <h3 class="offer-title">Stay on the saddle!</h3>
@@ -132,33 +165,34 @@
         </form>
       </section>
     </main>
+    <script type="text/javascript" src="http://yastatic.net/jquery/2.1.3/jquery.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+    <script type="text/javascript" src="js/js.js"></script>
   </body>
   <footer class="footer-wrapper">
-    <div class="foot">
-      <div id="container" class="footer-info">
-        <div class="info">
-          <b>AOD New York </b></br>
-          <i>2250 Lexington Avenue </br> New York, NY 10035  - info@domain.com</i>
-        </div>
-        <div class="social">
-          <ul>
-            <li>
-              <a class="social-btn social-btn-twitter" href="#" alt="Твиттер">
-              <img src="img/twitter.png" height="35" width="34">
-              </a>
-            </li>
-            <li>
-              <a class="social-btn social-btn-fb" href="#">
-              <img src="img/f-b.png" height="35" width="34" alt="Фейсбук">
-              </a>
-            </li>
-            <li>
-              <a class="social-btn social-btn-something" href="#" alt="Непонятно что">
-              <img src="img/something.png" height="35" width="34">
-              </a>
-            </li>
-          </ul>
-        </div>
+    <div class="footer-info">
+      <div class="info">
+        <b>AOD New York </b></br>
+        <i>2250 Lexington Avenue </br> New York, NY 10035  - info@domain.com</i>
+      </div>
+      <div class="social">
+        <ul>
+          <li>
+            <a class="social-btn social-btn-twitter" href="#" alt="Твиттер">
+            <img src="img/twitter.png" height="35" width="34">
+            </a>
+          </li>
+          <li>
+            <a class="social-btn social-btn-fb" href="#">
+            <img src="img/f-b.png" height="35" width="34" alt="Фейсбук">
+            </a>
+          </li>
+          <li>
+            <a class="social-btn social-btn-something" href="#" alt="Непонятно что">
+            <img src="img/something.png" height="35" width="34">
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
   </footer>
